SM-700 valuations trigger from mint vehicle (#47)
* add setting

* fill in some stuff

* implement process vehicle mint for valuation

* linter and remove unused code

* add tokenId from request for val

* rewire dependencies

* remove dead test

* swagger, no v1

* add path to log, success instant offer log
